# STM32PureCpp

./: CMakeLists.txt  arm-none-eabi-gcc.cmake
src/: main.cc
startup/: STM32L073RZTX_FLASH.ld  startup_STM32L073.cc
